adding transitions, transformations and animations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Library</title>
 </head>
 <body>
@@ -23,17 +24,17 @@
         </div>
         <div class="contenedor__video">
             <div>
-                <p>The Power and Importance of ... READING!</p>
+                <p class="animate__animated animate__backInLeft anima">The Power and Importance of ... READING!</p>
                 <iframe src="https://www.youtube.com/embed/rW2r5uStgG0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
         <div class="footer">
-            <img src="images\book.png" alt="Book">
-            <p>All rights reserved</p>
+            <img src="./images/book.png" alt="Book">
+            <p class="animate__animated animate__pulse">All rights reserved</p>
             <div class="rrss">
-                <a href="#"><img src="images\facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="images\instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="images\twitter.png" alt="Twitter"></a>
+                <div><a href="#"><img src="./images/facebook.png" alt="Facebook"></a></div>
+                <div><a href="#"><img src="./images/instagram.png" alt="Instagram"></a></div>
+                <div><a href="#"><img src="./images/twitter.png" alt="Twitter"></a></div>
             </div>
         </div>
     </div>
