--- a/section/bestsellers.html
+++ b/section/bestsellers.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Best Sellers</title>
 </head>
 <body>
@@ -21,48 +22,56 @@
                 <li><a href="../section/contact.html">Contact</a></li>
             </ul>
         </div>
-        <div class="contenedor__bestsellers contenedor">
-            <p class="title__bestsellers">Details of the best sellers</p>
+        <div class="contenedor contenedor__bestsellers">
             <div class="books__bestsellers">
-                <p class="bestsellers titles">Best Sellers</p>
-                <img class="info__bestsellers" src="../images/thehungergames.jpg" alt="The Hunger Games">
-                <p class="date titles">Publication date</p>
-                <div class="info__date">September 14, 2008</div>
-                <p class="plot__bestsellers titles">Plot</p>
-                <div class="info__plot">The story is set in Panem. There are twelve poor districts governed by the rich Capitol. The Capitol organises the Hunger Games every year to punish the districts. One boy and one girl fight in a battle. Only one person will live. The story is about Katniss Everdeen. Her younger sister, Prim, is chosen to be a “tribute”, but Katniss volunteers to go instead. The other “tribute” from District 12 is a boy named Peeta.</div>
-                <p class="comments titles">Comments</p>
-                <div class="comments__bestsellers">
-                    <ol>
-                        <li> <i> Anna Maria said:</i>
-                            <br>
-                            The book was 100% better than the film. A good book to sit down with on a horrible rain day! It makes you happy to be alive and happy to know that you are not going to be entered in a competition where you are to fight to your death every year. But it's a great story!</li>
-                        <li><i>Oliver said:</i>
-                                <br>
-                            I watched the movies and they were really good.Are the books better than the book? And if so should I read this trilogy?</li>
-                        <li><i>Jack said:</i>
-                            <br>
-                            All three of the books are much, much, much better then the movies. The movies leave out many important parts whereas the book has a lot more depth and meaning etc in them so they are easier to understand the concept of the Hunger Games.</li>
-                    </ol>
-                </div> 
-            </div>
-            <div class="books__bestsellers">
-                <img class="info__bestsellers" src="../images/divergent.jpg" alt="Divergent">
-                <div class="info__date">April 26, 2011</div>
-                <div class="info__plot">This trilogy follows the life of Tris Prior, a young girl who is struggling to find her place in society. On their appointed day, every 16-year-old must pick the faction they stay with for the rest of their lives, or live factionless in contempt of society. For Tris Prior, her decision is incredibly difficult; be who she really is and join Dauntless or stay with her family and keep her feelings under lock and key. Tris chooses the Dauntless faction and a grueling initiation follows, in which her life is put at risk more than once. She is forced to fight, hurt and betray people she would never want to and friends she held dear perish. Whilst creating a new life for herself in the Dauntless faction, Tris must separate fake and real friends.</div>
-                <div class="comments__bestsellers">
-                    <ol>
-                        <li><i>Harry said:</i>
-                            <br>
-                            Divergent is by far one of the best book I have read!</li>
-                        <li><i>Jacob said:</i>
-                            <br>
-                            Came into this with high expectations. Came away very disappointed.</li>
-                        <li><i>Mitchael said:</i>
-                            <br>
-                            I have to start by saying that watching the Divergent movie made me want to read the book. I really enjoyed the movie and I thought for sure there was more in the book. Movie goers didn’t miss as much as I had hoped.
-                            /li>
-                    </ol>
-                </div>
+                <p class="title__bestsellers anima animate__animated animate__backInLeft">Details of the best sellers</p>
+                    <table>
+                        <thread>
+                            <tr>
+                                <th class="titles">Best Sellers</th>
+                                <th class="titles">Publication date</th>
+                                <th class="titles">Plot</th>
+                                <th class="titles">Comments</th>
+                            </tr>
+                            <tr>
+                                <td><img src="../images/thehungergames.jpg" alt="The Hunger Games"></td>
+                                <td>September 14, 2008</td>
+                                <td class="info__plot">The story is set in Panem. There are twelve poor districts governed by the rich Capitol. The Capitol organises the Hunger Games every year to punish the districts. One boy and one girl fight in a battle. Only one person will live. The story is about Katniss Everdeen. Her younger sister, Prim, is chosen to be a “tribute”, but Katniss volunteers to go instead. The other “tribute” from District 12 is a boy named Peeta.</td>
+                                <td class="comments__bestsellers">
+                                    <ol>
+                                        <li> <i> Anna Maria said:</i>
+                                            <br>
+                                            The book was 100% better than the film. A good book to sit down with on a horrible rain day! It makes you happy to be alive and happy to know that you are not going to be entered in a competition where you are to fight to your death every year. But it's a great story!</li>
+                                        <li><i>Oliver said:</i>
+                                            <br>
+                                            I watched the movies and they were really good.Are the books better than the book? And if so should I read this trilogy?</li>
+                                        <li><i>Jack said:</i>
+                                            <br>
+                                            All three of the books are much, much, much better then the movies. The movies leave out many important parts whereas the book has a lot more depth and meaning etc in them so they are easier to understand the concept of the Hunger Games.</li>
+                                    </ol>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><img src="../images/divergent.jpg" alt="Divergent"></td>
+                                <td>April 26, 2011</td>
+                                <td class="info__plot">This trilogy follows the life of Tris Prior, a young girl who is struggling to find her place in society. On their appointed day, every 16-year-old must pick the faction they stay with for the rest of their lives, or live factionless in contempt of society. For Tris Prior, her decision is incredibly difficult; be who she really is and join Dauntless or stay with her family and keep her feelings under lock and key. Tris chooses the Dauntless faction and a grueling initiation follows, in which her life is put at risk more than once. She is forced to fight, hurt and betray people she would never want to and friends she held dear perish. Whilst creating a new life for herself in the Dauntless faction, Tris must separate fake and real friends.  </td>
+                                <td class="comments__bestsellers">
+                                    <ol>
+                                        <li><i>Harry said:</i>
+                                            <br>
+                                            Divergent is by far one of the best book I have read!</li>
+                                        <li><i>Jacob said:</i>
+                                            <br>
+                                            Came into this with high expectations. Came away very disappointed.</li>
+                                        <li><i>Mitchael said:</i>
+                                            <br>
+                                            I have to start by saying that watching the Divergent movie made me want to read the book. I really enjoyed the movie and I thought for sure there was more in the book. Movie goers didn’t miss as much as I had hoped.
+                                        </li>
+                                    </ol>
+                                </td>
+                            </tr>
+                        </thread>
+                    </table>
             </div>
             <div class="responsive__bestsellers">
                 <div class="bestsellers__info">
@@ -111,14 +120,14 @@
                     </div>
                 </div>
             </div>
-        </div> 
+        </div>
         <div class="footer">
             <img src="../images/book.png" alt="Book">
             <p>All rights reserved</p>
             <div class="rrss">
-                <a href="#"><img src="../images/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="../images/instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="../images/twitter.png" alt="Twitter"></a>
+                <div><a href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
+                <div><a href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
+                <div><a href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
             </div>
         </div>
     </div>
