--- a/section/kids.html
+++ b/section/kids.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Kids</title>
 </head>
 <body>
@@ -22,30 +23,30 @@
             </ul>
         </div>
         <div class="contenedor contenedor__kids">
-            <p class="kids__title">HOW TO TEACH A CHILD TO READ IN 3 EASY STEPS</p>
+            <p class="kids__title anima animate__animated animate__backInLeft">HOW TO TEACH A CHILD TO READ IN 3 EASY STEPS</p>
             <div>
-                <p>1. READ ALOUD TO YOUR CHILD </p>
+                <p class="kids__subtitle">1. READ ALOUD TO YOUR CHILD </p>
                 <img src="../images/boyreading.jpg" alt="Boy reading with his mom">
-                <p>Teaching your child to read is truly a process that begins at infancy. How much you read to your child is completely up to you and your family, but I suggest you aim to read at least 3-4 books a day, even while your child is very young.</p>
+                <p class="kids__text">Teaching your child to read is truly a process that begins at infancy. How much you read to your child is completely up to you and your family, but I suggest you aim to read at least 3-4 books a day, even while your child is very young.</p>
             </div>
             <div>
-            <p>2. ASK QUESTIONS</p>
-                <img src="../images/boyreading2.JPG" alt="Boy reading">
-                <p>Asking questions while reading to your child is not only great for encouraging your child to interact with the book, but it is also extremely effective in developing his ability to comprehend what he is reading.</p>
+            <p class="kids__subtitle">2. ASK QUESTIONS</p>
+                <img src="../images/boyreading5.jpg" alt="Boy reading">
+                <p class="kids__text">Asking questions while reading to your child is not only great for encouraging your child to interact with the book, but it is also extremely effective in developing his ability to comprehend what he is reading.</p>
             </div>
             <div>
-                <p>3. BE A GOOD (READING) EXAMPLE</p>
-                <img src="../images/boyreading3.JPG" alt="Boy reading with his dad">
-                <p>Even if your child is fascinated with books from an early age, her fascination will quickly dwindle if she does not see reading modeled in her home. If you are not an avid reader yourself, make a conscious effort to let your children see you reading for at least a few minutes each day! </p>
+                <p class="kids__subtitle">3. BE A GOOD (READING) EXAMPLE</p>
+                <img src="../images/boyreading4.JPG" alt="Boy reading with his dad">
+                <p class="kids__text">Even if your child is fascinated with books from an early age, her fascination will quickly dwindle if she does not see reading modeled in her home. If you are not an avid reader yourself, make a conscious effort to let your children see you reading for at least a few minutes each day! </p>
             </div>
         </div>
         <div class="footer">
             <img src="../images/book.png" alt="Book">
             <p>All rights reserved</p>
             <div class="rrss">
-                <a href="#"><img src="../images/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="../images/instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="../images/twitter.png" alt="Twitter"></a>
+                <div><a href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
+                <div><a href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
+                <div><a href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
             </div>
         </div>
     </div>
