--- a/section/kids.html
+++ b/section/kids.html
@@ -36,7 +36,7 @@
             </div>
             <div>
                 <p class="kids__subtitle">3. BE A GOOD (READING) EXAMPLE</p>
-                <img src="../images/boyreading4.JPG" alt="Boy reading with his dad">
+                <img src="../images/boyreading4.jpg" alt="Boy reading with his dad">
                 <p class="kids__text">Even if your child is fascinated with books from an early age, her fascination will quickly dwindle if she does not see reading modeled in her home. If you are not an avid reader yourself, make a conscious effort to let your children see you reading for at least a few minutes each day! </p>
             </div>
         </div>
