--- a/index.html
+++ b/index.html
@@ -1,42 +1,151 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css\styles.css">
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="images\book.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="css\styles.css">
     <title>Library</title>
-</head>
-<body>
-    <div id="contenedorIndex">
-        <div class="header">
+  </head>
+  <body>
+    <div class="container-fluid p-0">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light p-4">
             <a href="index.html"><img src="images\book.png" alt="Book"></a>
-            <ul class="nav">
-                <li><a href="./section/bestsellers.html">Best Sellers</a></li>
-                <li><a href="./section/genre.html">Genre</a></li>
-                <li><a href="./section/kids.html">Kids</a></li>
-                <li><a href="./section/contact.html">Contact</a></li>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link pe-4 ps-4 active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link pe-4 ps-4" href="./section/bestsellers.html">Bestsellers</a>
+              </li>
+             <li class="nav-item">
+                 <a class="nav-link pe-4 ps-4" href="./section/genre.html">Genre</a>
+             </li>
+             <li class="nav-item">
+                <a class="nav-link pe-4 ps-4" href="./section/kids.html">Kids</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link pe-4 ps-4" href="./section/contact.html">Contact</a>
+            </li>
             </ul>
-        </div>
-        <div class="contenedor__video">
-            <div>
-                <p class="animate__animated animate__backInLeft anima">The Power and Importance of ... READING!</p>
-                <iframe src="https://www.youtube.com/embed/rW2r5uStgG0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <form class="d-flex justify-content-end">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-secondary border-0" type="submit">Search</button>
+            </form>
+          </div>
+        </nav>
+    </div>
+    <div class="container-fluid p-0 carousel-desktop d-none d-md-block">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
+            <div class="carousel-inner" id="fondo">
+              <div class="carousel-item active">
+                <img src="images\taza-de-cafe-y-libro.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption fw-bold d-none d-md-block">
+                  <p>If there's a book that you want to read, but it hasn't been written yet, then you must write it.-Toni Morrison</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="images\pexels-monstera-5331074.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption fw-bold d-none d-md-block">
+                  <h5>Science says reading a book makes you a better friend</h5>
+                  <p>Book worms versus Nerds: Exposure to fiction versus nonfiction, divergent associations with social ability, and the simulation of fictional social worlds. -Keith Oatley</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="images\pexels-mart-production-8471848.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption fw-bold d-none d-md-block m0-auto text-center">
+                  <p>Reading should not be presented to children as a chore or duty. It should be offered to them as a precious gift.— Kate DiCamillo.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </div>
+    <div class="container-fluid p-0 carousel-responsive d-md-none">
+        <div id="carouselExampleCaptionsResponsive" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptionsResponsive" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptionsResponsive" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptionsResponsive" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner" id="fondo">
+              <div class="carousel-item active">
+                <img src="images\bookresponsive.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption fw-bold d-none d-md-block">
+                  <p>A reader lives a thousand lives before he dies . . . The man who never reads lives only one.– George R.R. Martin</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="images\bookresponsive2.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption fw-bold">
+                  <p>There is more treasure in books than in all the pirate’s loot on Treasure Island.– Walt Disney</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="images\bookresponsive3.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption fw-bold m0-auto text-center">
+                  <p>Books were my pass to personal freedom. I learned to read at age three, and there discovered was a whole world to conquer that went beyond our farm in Mississippi.– Oprah Winfrey</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptionsResponsive" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptionsResponsive" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </div>
+    <div class="container align-items-center flex-row container-video mt-5">
+      <div class="row">
+        <div class="col d-flex justify-content-center mb-4">
+          <p class="animate__animated animate__backInLeft anima title-container">The Power and Importance of ... READING!</p>
         </div>
-        <div class="footer">
+      </div>
+      <div class="row">
+        <div class="col-md-7 col-sm-12 flex-column">
+          <iframe src="https://www.youtube.com/embed/rW2r5uStgG0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-md-5 col-sm-12 d-flex align-items-center">
+          <p class="text-container-video">The importance of reading is completely undeniable. The next time someone asks you: “Why is reading important?” you will have an educated and thorough answer to respond with. If you’re not the biggest fan of books, that’s ok! You’re not alone! But before you shut down books and reading all together, take the time to learn more about the importance of reading and all the incredible benefits that come with it.</p>
+        </div>
+      </div>
+      
+    </div>
+    <div class="container-fluid p-0 bg-light mt-5">
+        <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
             <img src="./images/book.png" alt="Book">
             <p class="animate__animated animate__pulse">All rights reserved</p>
-            <div class="rrss">
-                <div><a href="#"><img src="./images/facebook.png" alt="Facebook"></a></div>
-                <div><a href="#"><img src="./images/instagram.png" alt="Instagram"></a></div>
-                <div><a href="#"><img src="./images/twitter.png" alt="Twitter"></a></div>
+            <div class="rrss d-flex">
+                <div class="m-2"><a class="p-2" href="#"><img src="./images/facebook.png" alt="Facebook"></a></div>
+                <div class="m-2"><a class="p-2" href="#"><img src="./images/instagram.png" alt="Instagram"></a></div>
+                <div class="m-2"><a class="p-2" href="#"><img src="./images/twitter.png" alt="Twitter"></a></div>
             </div>
         </div>
     </div>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  </body>
 </html>
