--- a/section/genre.html
+++ b/section/genre.html
@@ -1,92 +1,92 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="../images/book.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>Genre</title>
-</head>
-<body>
-    <div id="genre">
-        <div class="header">
+    <link rel="stylesheet" href="../css/styles.css">
+    <title>Library</title>
+  </head>
+  <body>
+    <div class="container-fluid p-0 mb-5">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light p-4">
             <a href="../index.html"><img src="../images/book.png" alt="Book"></a>
-            <ul class="nav">
-                <li><a href="../section/bestsellers.html">Best Sellers</a></li>
-                <li><a href="../section/genre.html">Genre</a></li>
-                <li><a href="../section/kids.html">Kids</a></li>
-                <li><a href="../section/contact.html">Contact</a></li>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link pe-4 ps-4 active" aria-current="page" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link pe-4 ps-4" href="../section/bestsellers.html">Bestsellers</a>
+              </li>
+             <li class="nav-item">
+                 <a class="nav-link pe-4 ps-4" href="../section/genre.html">Genre</a>
+             </li>
+             <li class="nav-item">
+                <a class="nav-link pe-4 ps-4" href="../section/kids.html">Kids</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link pe-4 ps-4" href="../section/contact.html">Contact</a>
+            </li>
             </ul>
-        </div>
-        <div class="contenedor contenedor__genre">
-            <div class="contenedor__genre__desktop">
-            <p class="title__bestsellers anima animate__animated animate__backInLeft">Genre of the best sellers</p>
-                <table>
-                    <thread>
-                        <tr>
-                            <th class="titles">Best Sellers</th>
-                            <th class="titles">Genre</th>
-                        </tr>
-                        <tr>
-                            <td><img class="info__bestsellers" src="../images/thehungergames.jpg" alt="The Hunger Games"></td>
-                            <td>
-                                <ul>
-                                    <li>Adventure</li>
-                                    <li>Science fiction</li>
-                                </ul>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><img class="info__bestsellers" src="../images/divergent.jpg" alt="Divergent"></td>
-                            <td>
-                                <ul>
-                                    <li>Dystopian</li>
-                                    <li>Speculative Fiction</li>
-                                    <li>Young Adult</li>
-                                </ul>
-                            </td>
-                        </tr>
-                    </thread>
-                </table>
-            </div>
-            <div class="contenedor__genre__responsive">
-                <p class="title__bestsellers">Genre of the best sellers</p>
-                <div class="books__genre">
-                    <p class="titles">Best Sellers</p>
-                    <img class="info__bestsellers" src="../images/thehungergames.jpg" alt="The Hunger Games">
-                    <p class="date titles">Genre</p>
-                    <div class="info__date">
-                        <ul>
-                            <li>Adventure</li>
-                            <li>Science fiction</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="books__genre">
-                    <img class="info__bestsellers" src="../images/divergent.jpg" alt="Divergent">
-                    <div class="info__date">
-                        <ul>
-                            <li>Dystopian</li>
-                            <li>Speculative Fiction</li>
-                            <li>Young Adult</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer">
-            <img src="../images/book.png" alt="Book">
-            <p>All rights reserved</p>
-            <div class="rrss">
-                <div><a href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
-                <div><a href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
-                <div><a href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
-            </div>
-        </div>
+            <form class="d-flex justify-content-end">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-secondary border-0" type="submit">Search</button>
+            </form>
+          </div>
+        </nav>
     </div>
-</body>
+    <div class="container table-responsive">
+        <p class="d-flex justify-content-center title__bestsellers anima animate__animated animate__backInLeft mb-3">Genre of the best sellers</p>
+        <table class="table align-middle m-auto table__genre">
+          <thead>
+            <tr>
+                <th>Best Sellers</th>
+                <th>Genre</th>
+            </tr>
+          </thead>
+          <tbody>
+              <tr>
+                <td><img class="info__bestsellers" src="../images/thehungergames.jpg" alt="The Hunger Games"></td>
+                <td>
+                    <ul>
+                        <li>Adventure</li>
+                        <li>Science fiction</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td><img class="info__bestsellers" src="../images/divergent.jpg" alt="Divergent"></td>
+                <td>
+                    <ul>
+                        <li>Dystopian</li>
+                        <li>Speculative Fiction</li>
+                        <li>Young Adult</li>
+                    </ul>
+                </td>
+            </tr>
+          </tbody>
+        </table>
+    </div>
+    <div class="container-fluid p-0 bg-light mt-5">
+            <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
+                <img src="../images/book.png" alt="Book">
+                <p class="animate__animated animate__pulse">All rights reserved</p>
+                <div class="rrss d-flex">
+                    <div class="m-2"><a class="p-2" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
+                    <div class="m-2"><a class="p-2" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
+                    <div class="m-2"><a class="p-2" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
+                </div>
+            </div>
+    </div>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    </body>
 </html>
