--- a/section/genre.html
+++ b/section/genre.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Library</title>
   </head>
   <body>
@@ -22,19 +22,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link pe-4 ps-4" aria-current="page" href="../index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link pe-4 ps-4" href="../section/bestsellers.html">Bestsellers</a>
+                <a class="nav-link" href="../section/bestsellers.html">Bestsellers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link pe-4 ps-4 active" href="../section/genre.html">Genre</a>
+                    <a class="nav-link active" href="../section/genre.html">Genre</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link pe-4 ps-4" href="../section/kids.html">Kids</a>
+                    <a class="nav-link" href="../section/kids.html">Kids</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link pe-4 ps-4" href="../section/contact.html">Contact</a>
+                    <a class="nav-link" href="../section/contact.html">Contact</a>
                 </li>
             </ul>
             <form class="d-flex justify-content-end">
@@ -45,7 +45,7 @@
         </nav>
     </div>
     <div class="container">
-        <p class="d-flex justify-content-center title__bestsellers anima animate__animated animate__backInLeft mb-5">What Is a Genre?</p>
+        <p class="title__bestsellers anima animate__animated animate__backInLeft ">What Is a Genre?</p>
         <div>Before we dive into what genre sells the most books, let’s discuss what a genre is. A genre is just a category in which your book falls. This will be evident in the underlying theme and storyline of your book. It helps readers decide what books they would most likely enjoy.
             Someone who loves romance books won’t want to read a book where the hero doesn’t fall in love with the man of her dreams. In the same way, someone who picks up a crime book is not going to be too happy if the book is focused on the relationship between the detective and the witness instead of actually solving the crime.
             Now, you definitely can have different elements of multiple genres in your book.
@@ -66,7 +66,7 @@
                 For non-fiction books, the genres are not as broad. Here, you can write about a topic you are familiar with or passionate about. If you have a skill or idea you would like to teach people, then writing a non-fiction book is the way to go.</div>
         </div>
         <div>
-            <p class="d-flex justify-content-center title__bestsellers anima animate__animated animate__backInLeft mb-5 mt-5">Which Book Genre Is The Most Popular In 2021?</p>
+            <p class="title__bestsellers anima animate__animated animate__backInLeft mt-5">Which Book Genre Is The Most Popular In 2021?</p>
             <p><strong>The most popular genre of books depends on the format and situation. The bestselling book genre is romance and the most profitable fiction book genre. Religious & inspirational books are the most popular non-fiction genre, whilst thrillers are the most popular audiobooks.</strong></p>
             <div class="mt-5">
                 <p><strong>List Of Most Popular Book Genres</strong></p>
@@ -147,9 +147,9 @@
             <img src="../images/book.png" alt="Book">
             <p class="animate__animated animate__pulse">All rights reserved</p>
             <div class="rrss d-flex">
-                <div class="m-2"><a class="p-2" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
-                <div class="m-2"><a class="p-2" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
-                <div class="m-2"><a class="p-2" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
+                <div><a href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
+                <div><a href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
+                <div><a href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
             </div>
         </div>
     </div>
