--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="css\styles.css">
+    <link rel="stylesheet" href="css\estilos.css">
     <title>Library</title>
   </head>
   <body>
@@ -22,19 +22,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link pe-4 ps-4 active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link pe-4 ps-4" href="./section/bestsellers.html">Bestsellers</a>
+              <a class="nav-link" href="./section/bestsellers.html">Bestsellers</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link pe-4 ps-4" href="./section/genre.html">Genre</a>
+                <a class="nav-link" href="./section/genre.html">Genre</a>
              </li>
              <li class="nav-item">
-                <a class="nav-link pe-4 ps-4" href="./section/kids.html">Kids</a>
+                <a class="nav-link" href="./section/kids.html">Kids</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link pe-4 ps-4" href="./section/contact.html">Contact</a>
+                <a class="nav-link" href="./section/contact.html">Contact</a>
             </li>
           </ul>
           <form class="d-flex justify-content-end">
@@ -91,20 +91,20 @@
         </div>
         <div class="carousel-inner" id="fondo">
           <div class="carousel-item active">
-            <img src="images\bookresponsive.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption fw-bold d-none d-md-block">
+            <img src="images\bookresponsive.jpg" alt="...">
+            <div class="carousel-caption d-none d-md-block">
               <p>A reader lives a thousand lives before he dies . . . The man who never reads lives only one.– George R.R. Martin</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images\bookresponsive2.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption fw-bold">
+            <img src="images\bookresponsive2.jpg" alt="...">
+            <div class="carousel-caption">
               <p>There is more treasure in books than in all the pirate’s loot on Treasure Island.– Walt Disney</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images\bookresponsive3.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption fw-bold m0-auto text-center">
+            <img src="images\bookresponsive3.png" alt="...">
+            <div class="carousel-caption m0-auto text-center">
               <p>Books were my pass to personal freedom. I learned to read at age three, and there discovered was a whole world to conquer that went beyond our farm in Mississippi.– Oprah Winfrey</p>
             </div>
           </div>
@@ -135,48 +135,48 @@
       </div>
       
     </div>
-    <div class="container col-lg-7 col-12 d-flex flex-column justify-content-start mt-5">
-        <div class="mb-4 fw-bold fs-5">Importance of Reading Books</div>
-        <p class="mb-5 lh-lg">There are multiple benefits of reading books. From building your vocabulary to reducing stress and depression. The importance of reading is completely undeniable. The next time someone asks you: “Why is reading important?” you will have an educated and thorough answer to respond with. If you’re not the biggest fan of books, that’s ok! You’re not alone! But before you shut down books and reading all together, take the time to learn more about the importance of reading and all the incredible benefits that come with it. Here’re 10 benefits of reading to get you to start reading.</p>
-        <div class="d-flex justify-content-center img-readingbooks"><img class="img-fluid" src="images\readingbook.jpg" alt="Book"></div>
-        <div class="mb-4 mt-5 fw-bold fs-5">1. Mental Stimulation</div>
-        <p class="mb-5 lh-lg">Studies have shown that staying mentally stimulated can slow the progress of (or possibly even prevent) Alzheimer’s and Dementia, since keeping your brain active and engaged prevents it from losing power.
+    <div class="container list-reading-books col-lg-7 col-12 d-flex flex-column justify-content-start mt-5">
+        <div>Importance of Reading Books</div>
+        <p>There are multiple benefits of reading books. From building your vocabulary to reducing stress and depression. The importance of reading is completely undeniable. The next time someone asks you: “Why is reading important?” you will have an educated and thorough answer to respond with. If you’re not the biggest fan of books, that’s ok! You’re not alone! But before you shut down books and reading all together, take the time to learn more about the importance of reading and all the incredible benefits that come with it. Here’re 10 benefits of reading to get you to start reading.</p>
+        <span class="img-readingbooks"><img class="img-fluid" src="images\readingbook.jpg" alt="Book"></span>
+        <div class="mt-5">1. Mental Stimulation</div>
+        <p>Studies have shown that staying mentally stimulated can slow the progress of (or possibly even prevent) Alzheimer’s and Dementia, since keeping your brain active and engaged prevents it from losing power.
           Just like any other muscle in the body, the brain requires exercise to keep it strong and healthy, so the phrase “use it or lose it” is particularly apt when it comes to your mind. Doing puzzles and playing games such as chess have also been found to be helpful with cognitive stimulation.</p>
-        <div class="mb-4 fw-bold fs-5">2. Stress Reduction</div>
-        <p class="mb-5 lh-lg">No matter how much stress you have at work, in your personal relationships, or countless other issues faced in daily life, it all just slips away when you lose yourself in a great story. A well-written novel can transport you to other realms, while an engaging article will distract you and keep you in the present moment, letting tensions drain away and allowing you to relax.</p>
-        <div class="mb-4 fw-bold fs-5">3. Knowledge</div>
-        <div class="d-flex justify-content-center img-readingbooks"><img class="img-fluid" src="images\girlwithbook.jpg" alt="Girl with a book"></div>
-        <p class="mb-5 mt-5 lh-lg">Everything you read fills your head with new bits of information, and you never know when it might come in handy. The more knowledge you have, the better-equipped you are to tackle any challenge you’ll ever face.
+        <div>2. Stress Reduction</div>
+        <p>No matter how much stress you have at work, in your personal relationships, or countless other issues faced in daily life, it all just slips away when you lose yourself in a great story. A well-written novel can transport you to other realms, while an engaging article will distract you and keep you in the present moment, letting tensions drain away and allowing you to relax.</p>
+        <div>3. Knowledge</div>
+        <span class="img-readingbooks"><img class="img-fluid" src="images\girlwithbook.jpg" alt="Girl with a book"></span>
+        <p class="mt-5">Everything you read fills your head with new bits of information, and you never know when it might come in handy. The more knowledge you have, the better-equipped you are to tackle any challenge you’ll ever face.
           Additionally, here’s a bit of food for thought: should you ever find yourself in dire circumstances, remember that although you might lose everything else—your job, your possessions, your money, even your health—knowledge can never be taken from you.</p>
-        <div class="mb-4 fw-bold fs-5">4. Vocabulary Expansion</div>
-        <p class="mb-5 lh-lg">This goes with the above topic:
+        <div>4. Vocabulary Expansion</div>
+        <p>This goes with the above topic:
           The more you read, the more words you gain exposure to, and they’ll inevitably make their way into your everyday vocabulary.
           Being articulate and well-spoken is of great help in any profession, and knowing that you can speak to higher-ups with self-confidence can be an enormous boost to your self-esteem. It could even aid in your career, as those who are well-read, well-spoken, and knowledgeable on a variety of topics tend to get promotions more quickly (and more often) than those with smaller vocabularies and lack of awareness of literature, scientific breakthroughs, and global events.
           Reading books is also vital for learning new languages, as non-native speakers gain exposure to words used in context, which will ameliorate their own speaking and writing fluency.</p>
-        <div class="mb-4 fw-bold fs-5">5. Memory Improvement</div>
-        <div class="d-flex justify-content-center img-readingbooks"><img class="img-fluid" src="images\twobooks.jpg" alt="Two books"></div>
-        <p class="mb-5 mt-5 lh-lg">When you read a book, you have to remember an assortment of characters, their backgrounds, ambitions, history, and nuances, as well as the various arcs and sub-plots that weave their way through every story. That’s a fair bit to remember, but brains are marvellous things and can remember these things with relative ease.
+        <div>5. Memory Improvement</div>
+        <span class="img-readingbooks"><img class="img-fluid" src="images\twobooks.jpg" alt="Two books"></span>
+        <p class="mt-5">When you read a book, you have to remember an assortment of characters, their backgrounds, ambitions, history, and nuances, as well as the various arcs and sub-plots that weave their way through every story. That’s a fair bit to remember, but brains are marvellous things and can remember these things with relative ease.
           Amazingly enough, every new memory you create forges new synapses (brain pathways) and strengthens existing ones, which assists in short-term memory recall as well as stabilizing moods.How cool is that?</p>
-        <div class="mb-4 fw-bold fs-5">6. Stronger Analytical Thinking Skills</div>
-        <p class="mb-5 lh-lg">Have you ever read an amazing mystery novel, and solved the mystery yourself before finishing the book? If so, you were able to put critical and analytical thinking to work by taking note of all the details provided and sorting them out to determine “whodunnit”.
+        <div>6. Stronger Analytical Thinking Skills</div>
+        <p>Have you ever read an amazing mystery novel, and solved the mystery yourself before finishing the book? If so, you were able to put critical and analytical thinking to work by taking note of all the details provided and sorting them out to determine “whodunnit”.
           That same ability to analyze details also comes in handy when it comes to critiquing the plot; determining whether it was a well-written piece, if the characters were properly developed, if the storyline ran smoothly, etc.
           Should you ever have an opportunity to discuss the book with others, you’ll be able to state your opinions clearly, as you’ve taken the time to really consider all the aspects involved.</p>
-        <div class="mb-4 fw-bold fs-5">7. Improved Focus and Concentration</div>
-        <div class="d-flex justify-content-center img-readingbooks"><img class="img-fluid" src="images\goldenbook.jpg" alt="Book in golden hour"></div>
-        <p class="mb-5 mt-5 lh-lg">In our internet-crazed world, attention is drawn in a million different directions at once as we multi-task through every day.
+        <div>7. Improved Focus and Concentration</div>
+        <span class="img-readingbooks"><img class="img-fluid" src="images\goldenbook.jpg" alt="Book in golden hour"></span>
+        <p class="mt-5">In our internet-crazed world, attention is drawn in a million different directions at once as we multi-task through every day.
           In a single 5-minute span, the average person will divide their time between working on a task, checking email, chatting with a couple of people (via gchat, skype, etc.), keeping an eye on twitter, monitoring their smartphone, and interacting with co-workers. This type of ADD-like behaviour causes stress levels to rise, and lowers our productivity.
           When you read a book, all of your attention is focused on the story—the rest of the world just falls away, and you can immerse yourself in every fine detail you’re absorbing.
           Try reading for 15-20 minutes before work (i.e. on your morning commute, if you take public transit), and you’ll be surprised at how much more focused you are once you get to the office.</p>
-        <div class="mb-4 fw-bold fs-5">8. Better Writing Skills</div>
-        <p class="mb-5 lh-lg">This goes hand-in-hand with the expansion of your vocabulary:
+        <div>8. Better Writing Skills</div>
+        <p>This goes hand-in-hand with the expansion of your vocabulary:
           Exposure to published, well-written work has a noted effect on one’s own writing, as observing the cadence, fluidity, and writing styles of other authors will invariably influence your own work.
           In the same way that musicians influence one another and painters use techniques established by previous masters, so do writers learn how to craft prose by reading the works of others.</p>
-        <div class="mb-4 fw-bold fs-5">9. Tranquility</div>
-        <div class="d-flex justify-content-center img-readingbooks"><img class="img-fluid" src="images\tranquility.jpg" alt="Tranquility"></div>
-        <p class="mb-5 mt-5 lh-lg">In addition to the relaxation that accompanies reading a good book, it’s possible that the subject you read about can bring about immense inner peace and tranquility.
+        <div>9. Tranquility</div>
+        <span class="img-readingbooks"><img class="img-fluid" src="images\tranquility.jpg" alt="Tranquility"></span>
+        <p class="mt-5">In addition to the relaxation that accompanies reading a good book, it’s possible that the subject you read about can bring about immense inner peace and tranquility.
           Reading spiritual texts can lower blood pressure and bring about an immense sense of calm, while reading self-help books has been shown to help people suffering from certain mood disorders and mild mental illnesses.</p>
-        <div class="mb-4 fw-bold fs-5">10. Free Entertainment</div>
-        <p class="lh-lg">Though many of us like to buy books so we can annotate them and dog-ear pages for future reference, they can be quite pricey.
+        <div>10. Free Entertainment</div>
+        <p>Though many of us like to buy books so we can annotate them and dog-ear pages for future reference, they can be quite pricey.
           For low-budget entertainment, you can visit your local library and bask in the glory of the countless tomes available there for free. Libraries have books on every subject imaginable, and since they rotate their stock and constantly get new books, you’ll never run out of reading materials.
           If you happen to live in an area that doesn’t have a local library, or if you’re mobility-impaired and can’t get to one easily, most libraries have their books available in PDF or ePub format so you can read them on your e-reader, iPad, or your computer screen.
           There are also many sources online where you can download free e-books, so go hunting for something new to read!
@@ -187,10 +187,10 @@
       <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
         <img src="./images/book.png" alt="Book">
         <p class="animate__animated animate__pulse">All rights reserved</p>
-        <div class="rrss d-flex">
-          <div class="m-2"><a class="p-2" href="#"><img src="./images/facebook.png" alt="Facebook"></a></div>
-          <div class="m-2"><a class="p-2" href="#"><img src="./images/instagram.png" alt="Instagram"></a></div>
-          <div class="m-2"><a class="p-2" href="#"><img src="./images/twitter.png" alt="Twitter"></a></div>
+        <div class="rrss">
+          <div><a href="#"><img src="./images/facebook.png" alt="Facebook"></a></div>
+          <div><a href="#"><img src="./images/instagram.png" alt="Instagram"></a></div>
+          <div><a href="#"><img src="./images/twitter.png" alt="Twitter"></a></div>
         </div>
       </div>
     </div>
