--- a/section/bestsellers.html
+++ b/section/bestsellers.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Library</title>
   </head>
     <body>
@@ -22,19 +22,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link pe-4 ps-4" aria-current="page" href="../index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pe-4 ps-4  active" href="../section/bestsellers.html">Bestsellers</a>
+                        <a class="nav-link active" href="../section/bestsellers.html">Bestsellers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pe-4 ps-4" href="../section/genre.html">Genre</a>
+                        <a class="nav-link" href="../section/genre.html">Genre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pe-4 ps-4" href="../section/kids.html">Kids</a>
+                        <a class="nav-link" href="../section/kids.html">Kids</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pe-4 ps-4" href="../section/contact.html">Contact</a>
+                        <a class="nav-link" href="../section/contact.html">Contact</a>
                     </li>
                     </ul>
                     <form class="d-flex justify-content-end">
@@ -44,10 +44,10 @@
                 </div>
             </nav>
         </div>
-        <div class="container container-bestsellers-list mt-3 mb-5 d-flex flex-column align-items-center">
-            <p class="d-flex justify-content-center title__bestsellers anima animate__animated animate__backInLeft mb-3">How bestseller lists actually work</p>
+        <div class="container mt-3 mb-5 d-flex flex-column align-items-center">
+            <p class="title__bestsellers anima animate__animated animate__backInLeft">How bestseller lists actually work</p>
             <img class="mb-3 mt-3 img-fluid" src="../images/bestsellers.jpg" alt="Best Sellers">
-            <div class="description mt-5">
+            <div class="description">
                 <p><strong>The New York Times bestseller list</strong></p>
                 <p>This is considered the most important bestseller list, and the only one that people tend to talk about by name. If you make this list, you put "New York Times bestseller" on the top of your books. Every other list generally gets a "National bestseller" headline.</p>
                 <div class="mb-5 mt-5">
@@ -63,27 +63,25 @@
                     Make no mistake about it -- this is all just as elitist and snobbish as it sounds. They only recently started including ebooks in their lists, and they still heavily discount ebooks that have no print edition. Yes they track them, but they count their sales as less.
                     </p><p>
                     The reality is that even though the New York Times list is seen as the most prestigious, in many ways it's the least connected to actual book selling reality.</p>
-                    </div>
-                    <div class="mb-5">
-                    <p><strong>Tips and tricks</strong></p>
-                    <ul>
-                        <li class="mb-1">For the most part, they do not count self-published books. You must work through a traditional publishing company to even have a shot at this list.</li>
-                        <li class="mb-1">The category and window of your release significantly impacts the number of copies required to hit the New York Times bestseller list, but 5,000 copies during any one-week period is the minimum. I would recommend 10,000 to be sure.</li>
-                        <li>Have your publisher pick a down time in publishing. The fewer big books you have to compete with, the better.</li>
-                    </ul>
+                </div>
+                <div class="mb-5">
+                <p><strong>Tips and tricks</strong></p>
+                <ul>
+                    <li class="mb-1">For the most part, they do not count self-published books. You must work through a traditional publishing company to even have a shot at this list.</li>
+                    <li class="mb-1">The category and window of your release significantly impacts the number of copies required to hit the New York Times bestseller list, but 5,000 copies during any one-week period is the minimum. I would recommend 10,000 to be sure.</li>
+                    <li>Have your publisher pick a down time in publishing. The fewer big books you have to compete with, the better.</li>
+                </ul>
                 </div>
             </div>
         </div>
-        <div class="container">
-
-            <p class="d-flex justify-content-center title__bestsellers anima animate__animated animate__backInLeft mb-5">Details of The New York Times Best Sellers</p>
-
-            <div class="mb-4 fw-bold subtitle-bestsellers">Combined Print & E-Book Fiction <img src="../images/flecha.png" alt="Flecha"></div>
+        <div class="container container-cards">
+            <p class="title__bestsellers anima animate__animated animate__backInLeft">Details of The New York Times Best Sellers</p>
+            <div class="subtitle-bestsellers">Combined Print & E-Book Fiction <img src="../images/flecha.png" alt="Flecha"></div>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 row-cols-md-3 g-4 mb-5">
                 <div class="col">
-                <div class="card h-100">
+                <div class="card">
                     <img src="../images/imagesbestsellers\9781984818416.jpg" class="card-img-top" alt="WISH YOU WERE HERE">
-                    <div class="card-body h-100">
+                    <div class="card-body">
                     <div class="card-title fw-bold">WISH YOU WERE HERE</div>
                     <p class="card-text"><small class="text-muted">Jodi Picoult</small></p>
                     <p class="card-text">Diana O’Toole re-evaluates her seemingly perfect life when a pandemic disrupts her vacation in the Galápagos Islands.</p>
@@ -92,9 +90,9 @@
                 </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card">
                     <img src="../images/imagesbestsellers\9780316332910.jpg" class="card-img-top" alt="LEVIATHAN FALLS">
-                    <div class="card-body h-100">
+                    <div class="card-body">
                         <div class="card-title fw-bold">LEVIATHAN FALLS</div>
                         <p class="card-text"><small class="text-muted">James S.A. Corey</small></p>
                         <p class="card-text">The ninth book in the Expanse series. A group of unlikely allies might find a way to bring peace to a vast galactic civilization.</p>
@@ -103,9 +101,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card">
                     <img src="../images/imagesbestsellers\9781101885680.jpg" class="card-img-top" alt="GO TELL THE BEES THAT I AM GONE">
-                    <div class="card-body h-100">
+                    <div class="card-body">
                         <div class="card-title fw-bold">GO TELL THE BEES THAT I AM GONE</div>
                         <p class="card-text"><small class="text-muted">Diana Gabaldon</small></p>
                         <p class="card-text">The ninth book in the Outlander series. As the Revolutionary War moves closer to Fraser’s Ridge, Claire and Jamie reunite with their daughter and her family.</p>
@@ -114,9 +112,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card">
                     <img src="../images/imagesbestsellers\9780063112193.jpg" class="card-img-top" alt="AUTOPSY">
-                    <div class="card-body h-100">
+                    <div class="card-body">
                         <div class="card-title fw-bold">AUTOPSY</div>
                         <p class="card-text"><small class="text-muted">Patricia Cornwell</small></p>
                         <p class="card-text">The 25th book in the Kay Scarpetta series. Scarpetta investigates crime scenes in Virginia and outer space.</p>
@@ -125,9 +123,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card">
                     <img src="..\images\imagesbestsellers\9780385546027.jpg" class="card-img-top" alt="THE JUDGE'S LIST">
-                    <div class="card-body h-100">
+                    <div class="card-body">
                         <div class="card-title fw-bold">THE JUDGE'S LIST</div>
                         <p class="card-text"><small class="text-muted">John Grisham</small></p>
                         <p class="card-text">The second book in the Whistler series. Investigator Lacy Stoltz goes after a serial killer and closes in on a sitting judge.</p>
@@ -140,20 +138,20 @@
             <div class="mb-4 fw-bold subtitle-bestsellers">Combined Print & E-Book Nonfiction <img src="../images/flecha.png" alt="Flecha"></div>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 row-cols-md-3 g-4 mb-5">
                 <div class="col">
-                <div class="card h-100">
+                <div class="card">
                     <img src="..\images\imagesbestsellers\9780593230572.jpg" class="card-img-top" alt="THE 1619 PROJECT">
-                    <div class="card-body h-100">
-                    <div class="card-title fw-bold">THE 1619 PROJECT</div>
-                    <p class="card-text"><small class="text-muted">Nikole Hannah-Jones</small></p>
-                    <p class="card-text">Viewing America’s entanglement with slavery and its legacy, in essays adapted and expanded from The New York Times Magazine.</p>
-                    <a href="https://www.amazon.com/dp/0593230574?tag=NYTBSREV-20" type="button" class="mt-auto text-decoration-none button__card">BUY</a>
+                    <div class="card-body">
+                        <div class="card-title fw-bold">THE 1619 PROJECT</div>
+                        <p class="card-text"><small class="text-muted">Nikole Hannah-Jones</small></p>
+                        <p class="card-text">Viewing America’s entanglement with slavery and its legacy, in essays adapted and expanded from The New York Times Magazine.</p>
+                        <a href="https://www.amazon.com/dp/0593230574?tag=NYTBSREV-20" type="button" class="mt-auto text-decoration-none button__card">BUY</a>
                     </div>
                 </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card">
                     <img src="../images/imagesbestsellers\9780063076099.jpg" class="card-img-top" alt="THE STORYTELLER">
-                    <div class="card-body h-100">
+                    <div class="card-body">
                         <div class="card-title fw-bold">THE STORYTELLER</div>
                         <p class="card-text"><small class="text-muted">Dave Grohl</small></p>
                         <p class="card-text">A memoir by the musician known for his work with Foo Fighters and Nirvana.</p>
@@ -162,9 +160,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card">
                     <img src="../images/imagesbestsellers\9780063046641.jpg" class="card-img-top" alt="ALL AMERICAN CHRISTMAS">
-                    <div class="card-body h-100">
+                    <div class="card-body">
                         <div class="card-title fw-bold">ALL AMERICAN CHRISTMAS</div>
                         <p class="card-text"><small class="text-muted">Rachel Campos-Duffy and Sean Duffy</small></p>
                         <p class="card-text">A collection of holiday memories from members of the staff of Fox News.</p>
@@ -173,9 +171,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card">
                     <img src="../images/imagesbestsellers\9780593159118.jpg" class="card-img-top" alt="ALL ABOUT ME!">
-                    <div class="card-body h-100">
+                    <div class="card-body">
                         <div class="card-title fw-bold">ALL ABOUT ME!</div>
                         <p class="card-text"><small class="text-muted">Mel Brooks</small></p>
                         <p class="card-text">The EGOT and Kennedy Center honoree shares stories about making comedy for the stage, film and television</p>
@@ -184,9 +182,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card">
                     <img src="../images/imagesbestsellers\9781984877925.jpg" class="card-img-top" alt="WILL">
-                    <div class="card-body h-100">
+                    <div class="card-body">
                         <div class="card-title fw-bold">WILL</div>
                         <p class="card-text"><small class="text-muted">Will Smith with Mark Manson</small></p>
                         <p class="card-text">The actor, producer and musician tells his life story and lessons he learned along the way.</p>
@@ -196,12 +194,12 @@
                 </div>
             </div>
 
-            <div class="mb-4 fw-bold subtitle-bestsellers">Paperback Trade Fiction <img src="../images/flecha.png" alt="Flecha"></div>
+            <div class="subtitle-bestsellers">Paperback Trade Fiction <img src="../images/flecha.png" alt="Flecha"></div>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 row-cols-md-3 g-4 mb-5">
                 <div class="col">
-                <div class="card h-100">
+                <div class="card">
                     <img src="..\images\imagesbestsellers\9781501110375.jpg" class="card-img-top" alt="IT ENDS WITH US">
-                    <div class="card-body h-100">
+                    <div class="card-body">
                     <div class="card-title fw-bold">IT ENDS WITH US</div>
                     <p class="card-text"><small class="text-muted">Colleen Hoover</small></p>
                     <p class="card-text">A battered wife raised in a violent home attempts to halt the cycle of abuse.</p>
@@ -210,9 +208,9 @@
                 </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card">
                     <img src="../images/imagesbestsellers\9781501161933.jpg" class="card-img-top" alt="THE SEVEN HUSBANDS OF EVELYN HUGO">
-                    <div class="card-body h-100">
+                    <div class="card-body">
                         <div class="card-title fw-bold">THE SEVEN HUSBANDS OF EVELYN HUGO</div>
                         <p class="card-text"><small class="text-muted">Taylor Jenkins Reid</small></p>
                         <p class="card-text">A movie icon recounts stories of her loves and career to a struggling magazine writer.</p>
@@ -221,9 +219,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card">
                     <img src="../images/imagesbestsellers\9780062060624.jpg" class="card-img-top" alt="THE SONG OF ACHILLES">
-                    <div class="card-body h-100">
+                    <div class="card-body">
                         <div class="card-title fw-bold">THE SONG OF ACHILLES</div>
                         <p class="card-text"><small class="text-muted">Madeline Miller</small></p>
                         <p class="card-text">A reimagining of Homer’s “Iliad” that is narrated by Achilles' companion Patroclus.</p>
@@ -232,9 +230,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card">
                     <img src="../images/imagesbestsellers\9780593336823.jpg" class="card-img-top" alt="THE LOVE HYPOTHESIS">
-                    <div class="card-body h-100">
+                    <div class="card-body">
                         <div class="card-title fw-bold">THE LOVE HYPOTHESIS</div>
                         <p class="card-text"><small class="text-muted">Ali Hazelwood</small></p>
                         <p class="card-text">A young professor agrees to pretend to be a third-year Ph.D. candidate’s boyfriend.</p>
@@ -243,9 +241,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card">
                     <img src="../images/imagesbestsellers\9781476753195.jpg" class="card-img-top" alt="UGLY LOVE">
-                    <div class="card-body h-100">
+                    <div class="card-body">
                         <div class="card-title fw-bold">UGLY LOVE</div>
                         <p class="card-text"><small class="text-muted">Colleen Hoover</small></p>
                         <p class="card-text">A casual sexual relationship between Tate and Miles becomes more complicated than they expected.</p>
@@ -260,10 +258,10 @@
             <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
                 <img src="../images/book.png" alt="Book">
                 <p class="animate__animated animate__pulse">All rights reserved</p>
-                <div class="rrss d-flex">
-                    <div class="m-2"><a class="p-2" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
-                    <div class="m-2"><a class="p-2" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
-                    <div class="m-2"><a class="p-2" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
+                <div class="rrss">
+                    <div><a href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
+                    <div ><a href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
+                    <div ><a href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
                 </div>
             </div>
         </div>
