--- a/section/contact.html
+++ b/section/contact.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Library</title>
   </head>
   <body>
@@ -22,19 +22,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link pe-4 ps-4" aria-current="page" href="../index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link pe-4 ps-4" href="../section/bestsellers.html">Bestsellers</a>
+              <a class="nav-link" href="../section/bestsellers.html">Bestsellers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link pe-4 ps-4" href="../section/genre.html">Genre</a>
+              <a class="nav-link" href="../section/genre.html">Genre</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link pe-4 ps-4" href="../section/kids.html">Kids</a>
+              <a class="nav-link" href="../section/kids.html">Kids</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link pe-4 ps-4 active" href="../section/contact.html">Contact</a>
+              <a class="nav-link active" href="../section/contact.html">Contact</a>
             </li>
           </ul>
           <form class="d-flex justify-content-end">
@@ -45,7 +45,7 @@
       </nav>
     </div>
     <div class="container contacto d-flex align-items-center flex-column">
-      <p class="d-flex justify-content-center title__bestsellers anima animate__animated animate__backInLeft mb-3">You can contact us!</p>
+      <p class="title__bestsellers anima animate__animated animate__backInLeft mb-3">You can contact us!</p>
       <div class="col-12 col-lg-8 col-md-9">
         <form>
           <div class="mb-3 row">
@@ -97,10 +97,10 @@
       <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
         <img src="../images/book.png" alt="Book">
         <p class="animate__animated animate__pulse">All rights reserved</p>
-        <div class="rrss d-flex">
-          <div class="m-2"><a class="p-2" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
-          <div class="m-2"><a class="p-2" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
-          <div class="m-2"><a class="p-2" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
+        <div class="rrss">
+          <div><a href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
+          <div><a href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
+          <div><a href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
         </div>
       </div>
     </div>
