--- a/section/kids.html
+++ b/section/kids.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Library</title>
   </head>
   <body>
@@ -22,19 +22,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link pe-4 ps-4" aria-current="page" href="../index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link pe-4 ps-4" href="../section/bestsellers.html">Bestsellers</a>
+                <a class="nav-link" href="../section/bestsellers.html">Bestsellers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link pe-4 ps-4" href="../section/genre.html">Genre</a>
+                    <a class="nav-link" href="../section/genre.html">Genre</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link pe-4 ps-4 active" href="../section/kids.html">Kids</a>
+                    <a class="nav-link active" href="../section/kids.html">Kids</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link pe-4 ps-4" href="../section/contact.html">Contact</a>
+                    <a class="nav-link" href="../section/contact.html">Contact</a>
                 </li>
             </ul>
             <form class="d-flex justify-content-end">
@@ -45,20 +45,20 @@
         </nav>
     </div>
     <div class="container container__kids">
-        <p class="d-flex justify-content-center title__bestsellers anima animate__animated animate__backInLeft mb-3">HOW TO TEACH A CHILD TO READ IN 3 EASY STEPS</p>
+        <p class="title__bestsellers anima animate__animated animate__backInLeft">HOW TO TEACH A CHILD TO READ IN 3 EASY STEPS</p>
         <div class=" d-flex flex-column align-items-center">
             <p class="p-2">1. READ ALOUD TO YOUR CHILD </p>
-            <div class="overflow-hidden"><img src="../images/boyreading.jpg" alt="Boy reading with his mom"></div>
+            <div class="overflow-hidden img-fluid"><img src="../images/boyreading.jpg" alt="Boy reading with his mom"></div>
             <p class="p-5">Teaching your child to read is truly a process that begins at infancy. How much you read to your child is completely up to you and your family, but I suggest you aim to read at least 3-4 books a day, even while your child is very young.</p>
         </div>
         <div class=" d-flex flex-column align-items-center">
         <p class="p-2">2. ASK QUESTIONS</p>
-            <div class="overflow-hidden"><img src="../images/boyreading5.jpg" alt="Boy reading"></div>
+            <div class="overflow-hidden img-fluid"><img src="../images/boyreading5.jpg" alt="Boy reading"></div>
             <p class="p-5">Asking questions while reading to your child is not only great for encouraging your child to interact with the book, but it is also extremely effective in developing his ability to comprehend what he is reading.</p>
         </div>
         <div class=" d-flex flex-column align-items-center">
             <p class="p-2">3. BE A GOOD (READING) EXAMPLE</p>
-            <div class="overflow-hidden"><img src="../images/boyreading4.jpg" alt="Boy reading with his dad"></div>
+            <div class="overflow-hidden img-fluid"><img src="../images/boyreading4.jpg" alt="Boy reading with his dad"></div>
             <p class="p-5">Even if your child is fascinated with books from an early age, her fascination will quickly dwindle if she does not see reading modeled in her home. If you are not an avid reader yourself, make a conscious effort to let your children see you reading for at least a few minutes each day! </p>
         </div>
     </div>
@@ -66,10 +66,10 @@
         <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
             <img src="../images/book.png" alt="Book">
             <p class="animate__animated animate__pulse">All rights reserved</p>
-            <div class="rrss d-flex">
-                <div class="m-2"><a class="p-2" href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
-                <div class="m-2"><a class="p-2" href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
-                <div class="m-2"><a class="p-2" href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
+            <div class="rrss">
+                <div><a href="#"><img src="../images/facebook.png" alt="Facebook"></a></div>
+                <div><a href="#"><img src="../images/instagram.png" alt="Instagram"></a></div>
+                <div><a href="#"><img src="../images/twitter.png" alt="Twitter"></a></div>
             </div>
         </div>
     </div>
